k8s-cic/istio-envoy/cm.yaml
apiVersion: v1
kind: ConfigMap
metadata:
 name: envoyconfig
 namespace: default
data:
 envoy.yaml: |-
  static_resources:
   listeners:
   - address:
       socket_address:
         address: 0.0.0.0
         port_value: 80
     filter_chains:
     - filters:
       - name: envoy.http_connection_manager
         typed_config:
           "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
           codec_type: auto
           stat_prefix: ingress_http
           route_config:
             name: local_route
             virtual_hosts:
             - name: service
               domains:
               - "*"
               routes:
               - match:
                   prefix: "/hello"
                 route:
                   cluster: local_service
           http_filters:
           - name: envoy.filters.http.router
  
   clusters:
   - name: local_service
     connect_timeout: 1.25s
     type: STATIC
     lb_policy: round_robin
     load_assignment:
       cluster_name: local_service
       endpoints:
       - lb_endpoints:
         - endpoint:
             address:
               socket_address:
                 address: 127.0.0.1
                 port_value: 3000
  admin:
   access_log_path: "/dev/null"
   address:
     socket_address:
       address: 0.0.0.0
       port_value: 8081
